--- a/eas.json
+++ b/eas.json
@@ -1,5 +1,12 @@
 {
+  "cli": {
+    "version": ">= 5.2.0"
+  },
   "build": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal"
+    },
     "preview": {
       "android": {
         "buildType": "apk"
@@ -13,6 +20,9 @@
     "preview3": {
       "developmentClient": true
     },
+    "production": {}
+  },
+  "submit": {
     "production": {}
   }
 }
