alterações em home, mapa add, abs: para fezer rodar em um celular tem que ser utilizado as tag nativas do react native.

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "AppRota",
-    "slug": "AppRota",
+    "name": "teste1rota",
+    "slug": "teste1rota",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -21,16 +21,13 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      },
-      "package": "com.lipepraado.AppRota"
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "extra": {
-      "eas": {
-        "projectId": "c3a4acd9-4b87-4606-b7fd-74eb5a4e95ec"
-      }
-    }
+    "plugins": [
+      "expo-localization"
+    ]
   }
 }
