--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "approta",
+  "name": "teste1rota",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,22 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@expo/webpack-config": "^19.0.0",
+    "@mui/material": "^5.14.10",
+    "@mui/styled-engine-sc": "^5.14.10",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/native-stack": "^6.9.13",
-    "expo": "~49.0.10",
+    "expo": "~49.0.11",
+    "expo-localization": "~14.3.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "1.7.1",
     "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "^4.6.3",
-    "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
-    "@react-native-masked-view/masked-view": "0.2.9"
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
