--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/styled-engine-sc": "^5.14.10",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.14",
     "expo": "~49.0.11",
     "expo-localization": "~14.3.0",
     "expo-status-bar": "~1.6.0",
