criação da area de locais 1

--- a/app.json
+++ b/app.json
@@ -21,13 +21,19 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.lipepraado.appRota"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-localization"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "65cc04de-2e2d-40b9-9d76-3e24152680b7"
+      }
+    }
   }
 }
