--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "build-android": "(cd .android && .\\gradlew.bat assembleDebug)",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -29,7 +30,8 @@
     "react-native-maps": "1.7.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-web": "~0.19.6",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
