--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.14",
+    "axios": "^1.5.1",
     "expo": "~49.0.11",
     "expo-localization": "~14.3.0",
     "expo-status-bar": "~1.6.0",
@@ -29,7 +30,8 @@
     "react-native-maps": "1.7.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-web": "~0.19.6",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "expo-location": "~16.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
