--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo/webpack-config": "^19.0.0",
     "@mui/material": "^5.14.10",
     "@mui/styled-engine-sc": "^5.14.10",
+    "@react-native-community/geolocation": "^3.1.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
@@ -21,6 +22,7 @@
     "axios": "^1.5.1",
     "expo": "~49.0.11",
     "expo-localization": "~14.3.0",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.4.0",
     "react": "18.2.0",
@@ -30,8 +32,7 @@
     "react-native-maps": "1.7.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-web": "~0.19.6",
-    "styled-components": "^5.3.11",
-    "expo-location": "~16.1.0"
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
