--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-maps": "1.7.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-web": "~0.19.6",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "expo-linear-gradient": "~12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
